syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc PostGame (GameDTO) returns (MessageReply);
  rpc UpdateGame(GameDTO) returns (MessageReply);
  rpc DeleteGame(Id) returns (MessageReply);
  rpc PostUser(UserDTO) returns (MessageReply);
  rpc UpdateUser(UserDTO) returns (MessageReply);
  rpc DeleteUser(Id) returns (MessageReply);
  rpc AssociateGameWithUser(Purchase) returns (MessageReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GameDTO {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string synopsis = 4;
	int32 reviewsRating = 5;
	string coverFilePath = 6;
	int32 esrbRating = 7;
	string genre = 8;
	int32 publisherId = 9;
}

message UserDTO{
	int32 id = 1;
	string name = 2;
}

message Id {
	int32 id = 1;
}

message MessageReply {
	string message = 1;
}

message Purchase {
	int32 idGame = 1;
	int32 idUser = 2;
}